--- a/css/each_exrpt_post.css
+++ b/css/each_exrpt_post.css
@@ -1,6 +1,6 @@
 /*　モバイル（iPhone,Android）に関するCSSを記述する*/
 .wrap-col{
-    height: 100%;
+    height: auto;
     position:relative;
     width: 100%;
 }
@@ -18,7 +18,7 @@
 .random_grid li {
     display: inline-block;
     width: 87%;
-    height: 352px;
+    height: auto;
     background-color: #ffffff;
     box-shadow: 0 2px 10px 0px rgba(0,0,0,0.26);
     border-radius: 15px;
@@ -34,14 +34,15 @@
     transition: 0.1s;
 }
 .random_icon {
-    position: absolute;
+    position: relative;
     width:100%;
     height:236px;
-    margin-bottom: 30px;
+    margin-bottom: 16px;
     border-radius: 8px 8px 0 0 / 8px 8px 0 0;
 }
 
 .random_content{
+    position: relative;
     width: 100%;
     height: auto;
 }
@@ -50,7 +51,6 @@
     position:relative;
     display: inline-block;
     height: auto;
-    top: 294px;
     width: 100%;
     font-size: 1.2rem;
     color: #031e36;
@@ -61,13 +61,12 @@
 .random_name {
     position: relative;
     display: inline-block;
+    box-sizing: border-box;
     height: auto;
-    top: 252px;
     width: 100%;
     padding: 0 0 0 16px;
     text-align: left;
     font-size: 2.4rem;
-/*    letter-spacing: -0.8em;*/
     font-family: "ヒラギノ角ゴ ProN W6","ヒラギノ角ゴ Pro W6";
     color: #272727;
     margin-bottom: 15px;
@@ -77,7 +76,6 @@
 .random_description {
     position:relative;
     display: inline-block;
-    top: 92%;
     white-space: nowrap;
     width: 87%;
     overflow: hidden;
@@ -85,7 +83,7 @@
     text-overflow: ellipsis;
     font-size: 1.4rem;
     color: #031e36;
-    padding: 0 16px 0 16px;
+    padding: 16px 16px 16px 16px;
     text-align: left;
     font-family: "ヒラギノ角ゴ ProN W3","Hiragino Kaku Gothic Pro","ヒラギノ角ゴ ProN W3";
 }
@@ -120,7 +118,7 @@
 @media screen and (min-width:1024px) {
     /*　PC用のCSSを記述する　*/
     .wrap-col{
-        height: 350px;
+        height: auto;
         position:relative;
     }
 
@@ -137,7 +135,7 @@
     .random_grid li {
         display: inline-block;
         width: 343px;
-        height: 352px;
+        height: auto;
         background-color: #ffffff;
         box-shadow: 0 2px 10px 0px rgba(0,0,0,0.26);
         border-radius: 15px;
@@ -153,21 +151,20 @@
         transition: 0.1s;
     }
     .random_icon {
-        position: absolute;
+        position: relative;
         width:100%;
         height:236px;
-        margin-bottom: 30px;
+        margin-bottom: 16px;
         border-radius: 8px 8px 0 0 / 8px 8px 0 0;
     }
 
     .random_content{
         width: 100%;
-        height: 352px;
+        height: auto;
     }
 
     .random_tags_parent{
-        position:absolute;
-        top: 294px;
+        position:relative;
         width: 100%;
         font-size: 1.2rem;
         color: #031e36;
@@ -176,10 +173,10 @@
     }
 
     .random_name {
-        position: absolute;
-        top: 252px;
+        position: relative;
         width: 100%;
         height: auto;
+        box-sizing: border-box;
         padding: 0 0 0 16px;
         text-align: left;
         font-size: 2.4rem;
@@ -190,8 +187,7 @@
 
 
     .random_description {
-        position:absolute;
-        top: 92%;
+        position:relative;
         white-space: nowrap;
         width: 87%;
         overflow: hidden;
@@ -199,7 +195,7 @@
         text-overflow: ellipsis;
         font-size: 1.4rem;
         color: #031e36;
-        padding: 0 16px 0 16px;
+        padding: 16px 16px 16px 16px;
         text-align: left;
         font-family: "ヒラギノ角ゴ ProN W3","Hiragino Kaku Gothic Pro","ヒラギノ角ゴ ProN W3";
     }
