サイトポリシー、プライバシーポリシーのmargin-topの間隔を広げた

--- a/css/policy.css
+++ b/css/policy.css
@@ -71,6 +71,7 @@ body{
         width: auto;
         margin-left: 88px;
         margin-right: 88px;
+        margin-top: 48px;
         border-bottom: 3px solid #272727;
     }
     .policy{
