検索失敗の時のフォント修正

--- a/css/search.css
+++ b/css/search.css
@@ -49,6 +49,8 @@ header{
     margin-bottom: 32px;
     padding-top: 32px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+    font-family: 'Nunito','Noto Sans', sans-serif;
+    font-weight: 700;
 }
 
 
@@ -59,12 +61,12 @@ header{
 }
 
 .card__description{
+    font-family: 'Noto Sans', sans-serif;
     text-align: left;
     margin-top: 24px;
     margin-left: 32px;
     font-size: 18px;
     line-height: 36px;
-    font-weight: bold;
 }
 
 
@@ -118,7 +120,7 @@ header{
         font-size: 3.0rem;
     }
     .card__description{
-        margin-top: 32px;
+        margin-top: 24px;
         margin-left: 70px;
         font-size: 2.4rem;
         line-height: 48px;
