--- a/css/each_exrpt_post.css
+++ b/css/each_exrpt_post.css
@@ -52,7 +52,7 @@
     height: auto;
     width: 100%;
     font-size: 1.2rem;
-    color: #031e36;
+    color: #bdbdbd;
     text-align: left;
     padding: 0 0 0 16px;
 }
@@ -66,7 +66,8 @@
     padding: 0 0 0 16px;
     text-align: left;
     font-size: 2.4rem;
-    font-family: "ヒラギノ角ゴ ProN W6","ヒラギノ角ゴ Pro W6";
+    font-family:'Noto Sans', sans-serif;
+    font-weight: 400;
     color: #272727;
     margin-bottom: 15px;
 }
@@ -81,16 +82,19 @@
     -o-text-overflow: ellipsis;
     text-overflow: ellipsis;
     font-size: 1.4rem;
-    color: #031e36;
+    color: #7B7B7B;
     padding: 16px 16px 16px 16px;
+    padding-left: 0px;
     text-align: left;
-    font-family: "ヒラギノ角ゴ ProN W3","Hiragino Kaku Gothic Pro","ヒラギノ角ゴ ProN W3";
+    font-family:'Noto Sans', sans-serif;
+    font-weight: 400;
 }
 
 /*スラッグがクラス名になる*/
 .sports,.evevt,.social-activity,.hobby{
     margin: 0 2% 0 0;
-    font-family: "ヒラギノ角ゴ ProN W3","Hiragino Kaku Gothic Pro","ヒラギノ角ゴ ProN W3";
+    font-family:'Noto Sans', sans-serif;
+    font-weight: 400;
 }
 .sports i{
     color: #E63C6E;
@@ -101,6 +105,7 @@
 .social-activity i{
     color: #FAC81E;
 }
+
 .hobby i{
     color: #78C850;
 }
@@ -164,7 +169,6 @@
         position:relative;
         width: 100%;
         font-size: 1.2rem;
-        color: #031e36;
         text-align: left;
         padding: 0 0 0 16px;
     }
@@ -177,7 +181,8 @@
         padding: 0 0 0 16px;
         text-align: left;
         font-size: 2.4rem;
-        font-family: "ヒラギノ角ゴ ProN W6","ヒラギノ角ゴ Pro W6";
+        font-family:'Noto Sans', sans-serif;
+        font-weight: 400;
         color: #272727;
         margin-bottom: 15px;
     }
@@ -191,10 +196,11 @@
         -o-text-overflow: ellipsis;
         text-overflow: ellipsis;
         font-size: 1.4rem;
-        color: #031e36;
         padding: 16px 16px 16px 16px;
+        padding-left: 0px;
         text-align: left;
-        font-family: "ヒラギノ角ゴ ProN W3","Hiragino Kaku Gothic Pro","ヒラギノ角ゴ ProN W3";
+        font-family:'Noto Sans', sans-serif;
+        font-weight: 400;
     }
 }
 
