--- a/css/policy.css
+++ b/css/policy.css
@@ -7,8 +7,9 @@ body{
     -o-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
-    background: #f9f9f9;
-    font-family: 'ヒラギノ角ゴシック Pro', 'Hiragino Kaku Gothic Pro';
+    background: #ffffff;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 400;
 }
 /*---contact---*/
 /**--コンタクト--**/
@@ -24,7 +25,7 @@ body{
 
 .heading{
     /*    font-family: "HelveticaNeue-Thin", "Helvetica Neue Thin", "Helvetica Neue", ".HiraKakuInterface-W1";*/
-    font-weight: bold;
+    font-weight: 700;
     font-size: 1.2rem;
     text-align: center;
     background: #272727;
@@ -35,7 +36,7 @@ body{
 }
 
 .policy{
-    background: #f9f9f9;
+    background: #ffffff;
     color: #272727;
     padding: 16px;
     padding-bottom: 32px;
