フッターのフォント修正

--- a/css/headerandfooter.css
+++ b/css/headerandfooter.css
@@ -515,7 +515,9 @@
         width: 130px;
         display: flex;
         text-decoration: none;
-        font-size: 2.4rem;
+        font-size: 1.8rem;
+        letter-spacing: 2px;
+        line-height: 24px;
         padding-top: 12px;
         margin-left: 15px;
     }
