iOSSafariの自動でinput要素に自動でグラデーションするのを修正

--- a/css/contact.css
+++ b/css/contact.css
@@ -112,6 +112,12 @@ body{
 
 input[type="submit"]
 {
+    -webkit-appearance: none;
+    border-radius: 0;
+}
+
+input[type="submit"]
+{
     border: none;
     font-size: 1.8rem;
     background: #272727;
