--- a/css/home.css
+++ b/css/home.css
@@ -21,6 +21,7 @@ body{
     visibility:hidden;
 }
 /*toppage-btn*/
+/*
 .pageTop-btn {
     width: 64px;
     margin: 0 auto;
@@ -48,6 +49,7 @@ body{
     font-size: 2.4rem;
     top: 50%;
 }
+*/
 
 .button {
     position: relative;
@@ -102,12 +104,12 @@ body{
 @media screen and (min-width:1024px) {
     /*PC用のCSSを記述する*/
     /*toppage-btn*/
-    .pageTop-btn {
+    .button {
         width: 64px;
         margin: 0 auto;
         margin-bottom: 32px;
     }
-    .pageTop-btn a {
+    .button a {
         display: block;
         z-index: 999;
         border-radius: 100%;
@@ -122,11 +124,11 @@ body{
         box-shadow: 0 2px 10px 0px rgba(0,0,0,0.26);
         display: none;
     }
-    .pageTop-btn a:hover {
+    .butotn a:hover {
         text-decoration: none;
         opacity: 0.7;
     }
-    .pageTop-btn i{
+    .button i{
         font-size: 2.4rem;
         top: 50%;
     }
