--- a/css/home.css
+++ b/css/home.css
@@ -104,6 +104,10 @@ body{
 @media screen and (min-width:1024px) {
     /*PC用のCSSを記述する*/
     /*toppage-btn*/
+    .button{
+        display: none;
+    }
+/*
     .button {
         width: 64px;
         margin: 0 auto;
@@ -132,4 +136,5 @@ body{
         font-size: 2.4rem;
         top: 50%;
     }
+*/
 }
