--- a/css/each_exrpt_post.css
+++ b/css/each_exrpt_post.css
@@ -110,8 +110,12 @@
     display: inline-block;
     box-sizing: border-box;
     height: auto;
+    white-space: nowrap;
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
     width: 100%;
-    padding: 0 0 0 16px;
+    padding: 0 16px 0 16px;
     text-align: left;
     font-size: 2.4rem;
     font-family:'Noto Sans', sans-serif;
@@ -225,8 +229,12 @@
         position: relative;
         width: 100%;
         height: auto;
+        white-space: nowrap;
+        overflow: hidden;
+        -o-text-overflow: ellipsis;
+        text-overflow: ellipsis;
         box-sizing: border-box;
-        padding: 0 0 0 16px;
+        padding: 0 16px 0 16px;
         text-align: left;
         font-size: 2.4rem;
         font-family:'Noto Sans', sans-serif;
