fix backgroud color when category search

--- a/css/category.css
+++ b/css/category.css
@@ -5,7 +5,7 @@ body{
     box-sizing: border-box;
     font-family: 'Nunito','Noto Sans', sans-serif;
     font-weight: 700;
-    background: #EBEFF1;
+    background: #F9F9F9;
 }
 header{
     background-color: #ffffff;
