--- a/css/category.css
+++ b/css/category.css
@@ -9,7 +9,7 @@ body{
 }
 header{
     background-color: #ffffff;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.26);
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 }
 
 .main_parent {
