--- a/css/each_exrpt_post.css
+++ b/css/each_exrpt_post.css
@@ -143,7 +143,7 @@
 }
 
 /*スラッグがクラス名になる*/
-.sports,.evevt,.social-activity,.hobby{
+.sports,.event,.social-activity,.hobby{
     margin: 0 2% 0 0;
     font-family:'Noto Sans', sans-serif;
     font-weight: 400;
