--- a/css/headerandfooter.css
+++ b/css/headerandfooter.css
@@ -264,13 +264,18 @@
     /* サイドメニュー ※リストのスタイルは省略 */
     .menu_side {
         position: fixed;
-        top: 0;
+        padding: 0;
+        margin: 0;
         left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
         width: 300px;
         height: 100%;
         background: #333333;
         color: #fff;
         z-index: 1;
+        display: none;
     }
 
     /* メインコンテンツ */
@@ -289,7 +294,8 @@
 
     /* サイドメニューオープン */
     .side-open .header_wrapper,
-    .side-open .overlay{
+    .side-open .overlay,
+    .side-open header{
         -webkit-transform: translate3d(300px, 0, 0);
         transform: translate3d(300px, 0, 0);
     }
@@ -306,6 +312,8 @@
         font-size: 1.5rem;
         width: 100%;
         z-index: 100;
+        -webkit-transition: all .5s ease;
+        transition: all .5s ease;
     }
 
     /*ヘッダーロゴ*/
